# argos

./: CMakeLists.txt
doc/: Base Algorithm.txt  CLI Parameters.txt  File Split.txt  Network Commands.txt  Output File Structure.txt  Threads Model.txt  Vertices File Struct.txt
src/: base.cpp  base.h  common.h  common.h.in  convert.cpp  convert.h  io.cpp  io.h  main.cpp  net.cpp  net.h  net_def.h  net_int.cpp  net_int.h  point.h  settings.cpp  settings.cpp.in  settings.h  settings.h.in  solo.cpp  solo.h  th_queue.h
src/network/: clients.cpp  clients.h  net_base.h  net_def.h  net_int.cpp  net_int.h  net_internal.h  net_linux.cpp  net_win.cpp
